# m5-forecasting

./: main.py  pyproject.toml
.crossnote/: config.js
documentation/: data_descriptions.md
documentation/articles/Demand classification/: Demand Classification_ The Hidden Key to Smart Replenishment.html  Demand Classification_ The Hidden Key to Smart Replenishment.md  styles.css
notebooks/: 01_eda.ipynb  02_demand_classification.ipynb  notebook_setup.py
src/etl/: etl_calendar.py  etl_data.py  etl_prices.py  etl_sales.py  load_data.py  save_data.py  transform.py
src/utils/: config.py  logger.py
