[project]
name = "m5-forecasting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.3.2",
    "ipykernel>=6.29.5",
    "kaggle>=1.7.4.5",
    "matplotlib>=3.10.6",
    "nbformat>=5.10.4",
    "notebook>=7.4.4",
    "pandas>=2.3.1",
    "pip>=25.2",
    "plotly>=6.2.0",
    "polars-lts-cpu>=1.32.0",
    "pyarrow>=21.0.0",
    "pyforest>=1.1.2",
    "seaborn>=0.13.2",
    "sktime>=0.38.5",
    "statsmodels>=0.14.5",
]
